--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "slate": "^0.103.0",
+    "slate-history": "^0.100.0",
+    "slate-react": "^0.107.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
